<resources>
    <string name="app_name">Weather</string>

    <string name="login_title">Вход</string>
    <string name="hint_login">Логин</string>
    <string name="hint_password">Пароль</string>
    <string name="btn_login">Войти</string>
    <string name="btn_switch_to_linear">Переключиться на LinearLayout</string>
    <string name="btn_switch_to_constraint">Переключиться на ConstraintLayout</string>

    <string name="error_empty_login">Введите логин</string>
    <string name="error_empty_password">Введите пароль</string>
    <string name="error_short_password">Пароль слишком короткий (минимум %1$d символа)</string>
    <string name="welcome_message">Добро пожаловать, %1$s!</string>
    <string name="result_template">Логин: %1$s\nПароль: %2$s</string>

    <string name="menu_language">Язык</string>
    <string name="menu_theme">Тема</string>
    <string name="dialog_choose_language">Выберите язык</string>
    <string name="dialog_choose_theme">Выберите тему</string>
    <string name="theme_light">Светлая</string>
    <string name="theme_dark">Тёмная</string>
    <string name="theme_system">Системная</string>
    <string name="menu_settings">Настройки</string>

    <string name="selected_city_template">Выбран город: %1$s</string>

    <string name="btn_confirm_city">Выбрать этот город</string>

    <string name="action_details">Подробнее</string>
    <string name="action_delete">Удалить</string>
    <string name="dialog_delete_title">Удалить город?</string>
    <string name="dialog_delete_message">Вы уверены, что хотите удалить %1$s?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="dialog_add_city_title">Новый город</string>
    <string name="hint_city_name">Название города</string>
    <string name="btn_add">Добавить</string>
    <string name="cancel">Отмена</string>
    <string name="btn_add_city">+ Добавить город</string>
</resources>